--- a/DataUtilities/DataUtilities.csproj
+++ b/DataUtilities/DataUtilities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Helpers\CryptoRandom.cs" />
     <Compile Include="Utilities\Password.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Validator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
